--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,7 @@
 	box-sizing: border-box;
 }
 
-body {
+body, input[type="date"] {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
